--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello there</h1>
+    <%- include('../partials/header') %> 
+    <%- include('../partials/errorMessage') %>
     <%- body  %> 
 </body>
 </html>
