--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,6 @@
-Middle man
+<h2>Recently Added</h2>
+<div>
+    <% books.forEach( book =>{%> 
+        <span><img height="150" width="100" src="<%= book.coverImagePath %>" alt="Image cover"></span>
+    <%  }) %> 
+</div>
