--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,5 +1,4 @@
-New Author
-
+<h2>New Author</h2>
 <form action="/authors" method="POST">
     <%- include('./_form_fields.ejs') %> 
     <a href="/authors">Cancel</a>
