--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -3,7 +3,9 @@
 <%- include('../partials/deleteForm',{url : `/authors/${author.id}`}) %> 
 <% if(booksByAuthor.length > 0) {%> 
     <h2>Book by Author</h2>
-    <% booksByAuthor.forEach( book =>{%> 
+    <% booksByAuthor.forEach( book =>{%>
+        <a href="/books/<%= book.id %>">
         <span><img height="150" width="100" src="<%= book.coverImagePath %>" alt="book cover"></span>
+        </a>
     <%  }) %> 
 <% } %> 
