--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,4 +1,4 @@
-New Book
+<h2>New Book</h2>
 <form action="/books" method="post">
     <%- include('./_form_fields.ejs') %> 
     <a href="/books">Cancel</a>
