--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <h2>Recently Added</h2>
 <div>
     <% books.forEach( book =>{%> 
+        <a href="/books/<%= book.id %>">
         <span><img height="150" width="100" src="<%= book.coverImagePath %>" alt="Image cover"></span>
+        </a>
     <%  }) %> 
 </div>
